Fix #41 - Text is not legible depending on devices

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -77,6 +77,10 @@ hr {
   }
 }
 
+.pink-filled {
+  background-color: rgba(252, 111, 111, 0.5);
+}
+
 .split-container {
   left: 0;
   right: 0;
